[REFACTOR] '매물정보 입력해주세요 - 세부옵션' 아이템 추가